--- a/style.css
+++ b/style.css
@@ -389,6 +389,9 @@ form {
 
     .abonnement_txt {
         width: 50%;
+        display: flex;
+    flex-direction: column;
+        gap: 20px;
     }
 }
 
