--- a/style.css
+++ b/style.css
@@ -11,21 +11,37 @@ section {
     margin-bottom: 90px;
 }
 
+.main-button {
+        background-color:green ;
+        border-radius: 25px;
+        border: none;
+        color: white;
+        width: 200px;
+        height: 50px;
+}
+
+.main-button:hover {
+    transform: scale(1.1);
+    background-color:orangered;
+}
+
 .white-button {
     background-color:rgb(255, 255, 255) ;
-            border-radius: 10px;
+            border-radius: 50px;
             border: none;
+            height: 35px;
             color:green;
-    padding: 2px 4px;
+    padding: 2px 5px;
 }
 
 .green-button{
   
         background-color:green ;
-            border-radius: 10px;
+        height: 35px;
+            border-radius: 50px;
             border: none;
             color: white;
-            padding: 2px 4px;
+            padding: 2px 5px;
 }
 header {
     width: 100%;
@@ -34,12 +50,18 @@ header {
 
     .header_top {
         width: 100%;
+        height: 60px;
         background-color: #15253F;
         padding: 10px 15px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+
+        .header_top-left {
+            height: 100;
+            
+        }
 
     }
 
@@ -382,7 +404,6 @@ form {
     padding: 50px 20px;
 
     img {
-        height: 420px;
         width: 560px;
         background-color: #19c33b;
     }
